gcc/testsuite/rust/rustc/ui/meta/expected-error-correct-rev.rs
// revisions: a

// Counterpart to `expected-error-wrong-rev.rs`

#[cfg(a)]
fn foo() {
    let x: u32 = 22_usize; // { dg-error "" "" { target *-*-* } }
}

fn main() { }

